--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -31,6 +31,13 @@
     background-color: #ddd;
 }
 
+footer {
+	background-color: #333;
+	width: 100%;
+	bottom: 0;
+	position: relative;
+}
+
 
 
 
