Footer Fix, Added Visit Counter, & Copyright Info
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -102,7 +102,9 @@ body{
 .footer{ 
     position: absolute; 
     left: 0 ; right: 0; bottom: 0; 
-    height:[footer-height] 
+    height:[footer-height]
+	background-color: #333;
+	width: 100%;
 }
 
 
