Updated Footer Color, And Removed Non-Functional Comments
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -99,6 +99,11 @@ body{
     position:relative; 
     padding-bottom:[footer-height] 
 }
+
+center{
+	color:#029999;
+}
+
 .footer{ 
     position: absolute; 
     left: 0 ; right: 0; bottom: 0; 
