--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -174,6 +174,7 @@ center{
 
 /* Style The Dropdown Button */
 .dropbtn {
+	background: url(/resources/drawable/menuIcon.png);
     padding: 16px;
     font-size: 16px;
     border: none;
