--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -176,9 +176,10 @@ center{
 .dropbtn {
 	background: url(/resources/drawable/menuIcon.png);
     padding: 16px;
-    font-size: 16px;
     border: none;
     cursor: pointer;
+	width: 6%
+	height: 2%
 }
 
 /* The container <div> - needed to position the dropdown content */
