--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -174,12 +174,12 @@ center{
 
 /* Style The Dropdown Button */
 .dropbtn {
-    background: url(/resources/drawable/menuIcon.png);
+    /*background: url(/resources/drawable/menuIcon.png);*/
     padding: 16px;
     border: none;
     cursor: pointer;
-    width: 6%;
-    height: 2%;
+    width: 2%;
+    height: 1%;
 }
 
 /* The container <div> - needed to position the dropdown content */
