--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -94,7 +94,7 @@ body{
 	background-color: #191919;
     min-height:100%; 
     position:relative; 
-    padding-bottom:[footer-height] 
+    padding-bottom:[footer-height];
 	font-family: Verdana,sans-serif;
 }
 
