--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -104,8 +104,8 @@ center{
 
 .footer{ 
     position: absolute; 
-    left: 0 ; right: 0; bottom: 0; 
-    height:[footer-height]
+    left: 0; right: 0; bottom: 0; 
+    height: [footer-height];
 	background-color: #333;
 	width: 100%;
 }
@@ -173,14 +173,16 @@ center{
 .dropdown {
     position: relative;
     display: inline-block;
+	outline: none;
+	background-color: #191919;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #029999;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
     padding: 12px 16px;
     z-index: 1;
 }
