--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -108,6 +108,7 @@ center{
     height: [footer-height];
 	background-color: #333;
 	width: 100%;
+	padding: 1%;
 }
 
 
@@ -187,6 +188,19 @@ center{
     z-index: 1;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:click .dropdown-content {
     display: block;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+	background-color: #f1f1f1
 }
