--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -188,12 +188,12 @@ center{
     z-index: 1;
 }
 
-.dropdown:click .dropdown-content {
+.dropdown:hover .dropdown-content {
     display: block;
 }
 
 /* Links inside the dropdown */
-.dropContent {
+.dropdown-content, a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
