Attempted To Make Dropdown Vertical
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -200,7 +200,23 @@ center{
     display: block;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-	background-color: #f1f1f1
+.dropUl {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+}
+
+.dropLi, a{
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+.dropLi, a:hover {
+    background-color: #555;
+    color: white;
 }
