--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -192,23 +192,23 @@ center{
     display: block;
 }
 
-.dropUl {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
 }
 
-.dropLi, a{
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
 }
 
 /* Change the link color on hover */
-.dropLi, a:hover {
-    background-color: #555;
-    color: white;
+li a:hover {
+    background-color: #555;
+    color: white;
 }
