--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -176,6 +176,14 @@ center{
     display: inline-block;
 	outline: none;
 	background-color: #191919;
+	width: 3%;
+	height: 2%;
+}
+
+.dropbtn {
+	width: 100%;
+	height: 100%;
+	background-color: cyan;
 }
 
 .dropdown-content {
