--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -171,13 +171,19 @@ center{
 
 
 
+.rightContainer {
+	float: right;
+	height: 3%;
+	width: 10%;
+}
+
 .dropdown {
     position: relative;
     display: inline-block;
 	outline: none;
 	background-color: #191919;
-	width: 3%;
-	height: 2%;
+	width: 35%;
+	height: 100%;
 	float: right;
 }
 
