--- a/resources/style/global.css
+++ b/resources/style/global.css
@@ -103,7 +103,7 @@ center{
 }
 
 .footer{ 
-    position: absolute; 
+    position: relative; 
     left: 0; right: 0; bottom: 0; 
     height: [footer-height];
 	background-color: #333;
